[package]
name = "ash_bootstrap"
version = "0.1.0"
edition = "2024"
description = "A rust port of vk-bootstrap for the ash Vulkan wrapper"
license = "MIT"
repository = "https://github.com/DainiusRynkevicius/ash_bootstrap"
keywords = ["vulkan", "ash", "graphics", "bootstrap"]
categories = ["graphics", "rendering"]

[dependencies]
ash = "0.38.0"
thiserror = "2.0.18"


[dependencies.log]
version = "0.4.27"
optional = true

[features]
portability_enumeration = []
logger = ["log"]
default = ["portability_enumeration"]

[dev-dependencies]
winit = "0.30"
ash-window = "0.13"
raw-window-handle = "0.6"